[gd_scene load_steps=27 format=2]

[ext_resource path="res://Rooms/TemplateRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://Rooms/Area1/1-1/1-1.gd" type="Script" id=2]
[ext_resource path="res://Rooms/Area1/1-1/1-1tiles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Rooms/Area1/1-1/bg_lab_01.tres" type="TileSet" id=4]
[ext_resource path="res://Rooms/Area1/Assets/CitySillouette/citysky.png" type="Texture" id=5]
[ext_resource path="res://Rooms/Area1/Assets/CitySillouette/cityclouds.png" type="Texture" id=6]
[ext_resource path="res://Rooms/Area1/Assets/CitySillouette/city1.png" type="Texture" id=7]
[ext_resource path="res://Rooms/Area1/Assets/CitySillouette/city2.png" type="Texture" id=8]
[ext_resource path="res://Rooms/Area1/Assets/CitySillouette/city3.png" type="Texture" id=9]
[ext_resource path="res://Rooms/Area1/Assets/CitySillouette/city4.png" type="Texture" id=10]
[ext_resource path="res://Rooms/Area1/Assets/CitySillouette/city5.png" type="Texture" id=11]
[ext_resource path="res://Engine/light.png" type="Texture" id=12]
[ext_resource path="res://Rooms/Area1/Assets/Elevator/ElevatorCardPickup.tscn" type="PackedScene" id=13]
[ext_resource path="res://Player/Orange.tscn" type="PackedScene" id=14]
[ext_resource path="res://Rooms/Area1/Assets/FurnitureScenes/tableL.tscn" type="PackedScene" id=15]
[ext_resource path="res://Rooms/Area1/Assets/FurnitureScenes/excited.tscn" type="PackedScene" id=16]
[ext_resource path="res://Rooms/Area1/Assets/FurnitureScenes/beakers2.tscn" type="PackedScene" id=17]
[ext_resource path="res://Rooms/Area1/Assets/FurnitureScenes/tableM.tscn" type="PackedScene" id=18]
[ext_resource path="res://Rooms/Area1/Assets/beakers1.png" type="Texture" id=19]
[ext_resource path="res://Rooms/Area1/Assets/labdoor1.png" type="Texture" id=20]
[ext_resource path="res://Rooms/Area1/Assets/exploded_labdoor.png" type="Texture" id=21]
[ext_resource path="res://Rooms/Tools/PositionPortal.tscn" type="PackedScene" id=22]
[ext_resource path="res://Engine/Stations/SaveStation/SaveStation.tscn" type="PackedScene" id=23]
[ext_resource path="res://NPC/Miniman/Miniman.tscn" type="PackedScene" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 4 )

[node name="1-1" index="0" groups=[
"save",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TileMaps" parent="." index="1" instance=ExtResource( 3 )]

[node name="ColorRect" type="ColorRect" parent="TileMaps" index="0"]
margin_left = -74.0
margin_top = -112.0
margin_right = 844.0
margin_bottom = 265.0
color = Color( 0.054902, 0.0666667, 0.109804, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="TileMaps" index="1"]
margin_left = 144.0
margin_top = -489.0
margin_right = 176.0
margin_bottom = -112.0
color = Color( 0.054902, 0.0666667, 0.109804, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect5" type="ColorRect" parent="TileMaps" index="2"]
margin_left = 224.0
margin_top = -489.0
margin_right = 336.0
margin_bottom = -112.0
color = Color( 0.054902, 0.0666667, 0.109804, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect6" type="ColorRect" parent="TileMaps" index="3"]
margin_left = 176.0
margin_top = -489.0
margin_right = 224.0
margin_bottom = -272.0
color = Color( 0.054902, 0.0666667, 0.109804, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect3" type="ColorRect" parent="TileMaps" index="4"]
margin_left = 672.0
margin_top = -489.0
margin_right = 864.0
margin_bottom = -112.0
color = Color( 0.054902, 0.0666667, 0.109804, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect4" type="ColorRect" parent="TileMaps" index="5"]
margin_left = 336.0
margin_top = -176.0
margin_right = 672.0
margin_bottom = -112.0
color = Color( 0.054902, 0.0666667, 0.109804, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" parent="TileMaps" index="6"]
tile_data = PoolIntArray( -1900508, 0, 65537, -1900507, 0, 1, -1900506, 0, 1, -1900505, 0, 1, -1900504, 0, 1, -1900503, 0, 1, -1834972, 0, 65537, -1834971, 0, 1, -1834970, 0, 1, -1834969, 0, 1, -1834968, 0, 1, -1834967, 0, 1, -1769436, 0, 65537, -1769435, 0, 1, -1769434, 0, 1, -1769433, 0, 1, -1769432, 0, 1, -1769431, 0, 1, -1703900, 0, 65537, -1703899, 0, 1, -1703898, 0, 1, -1703897, 0, 1, -1703896, 0, 655362, -1703895, 0, 1, -1638364, 0, 65537, -1638363, 0, 1, -1638362, 0, 1, -1638361, 0, 1, -1638360, 0, 1, -1638359, 0, 1, -1572837, 0, 524292, -1572836, 0, 524292, -1572835, 0, 524292, -1572834, 0, 524292, -1572828, 0, 65537, -1572827, 0, 1, -1572826, 0, 1, -1572825, 0, 655361, -1572824, 0, 1, -1572823, 0, 1, -1507301, 0, 3, -1507300, 0, 3, -1507299, 0, 3, -1507298, 0, 3, -1507292, 0, 65537, -1507291, 0, 1, -1507290, 0, 1, -1507289, 0, 1, -1507288, 0, 1, -1507287, 0, 1, -1441765, 0, 3, -1441764, 0, 3, -1441763, 0, 3, -1441762, 0, 3, -1441756, 0, 65537, -1441755, 0, 1, -1441754, 0, 1, -1441753, 0, 1, -1441752, 0, 1, -1441751, 0, 1, -1376229, 0, 3, -1376228, 0, 3, -1376227, 0, 3, -1376226, 0, 3, -1376220, 0, 65537, -1376219, 0, 1, -1376218, 0, 1, -1376217, 0, 1, -1376216, 0, 1, -1376215, 0, 1, -1310693, 0, 3, -1310692, 0, 3, -1310691, 0, 3, -1310690, 0, 3, -1310684, 0, 65537, -1310683, 0, 1, -1310682, 0, 1, -1310681, 0, 1, -1310680, 0, 1, -1310679, 0, 1, -1245174, 0, 1, -1245173, 0, 1, -1245172, 0, 1, -1245171, 0, 1, -1245170, 0, 1, -1245169, 0, 1, -1245168, 0, 1, -1245167, 0, 1, -1245166, 0, 1, -1245165, 0, 1, -1245157, 0, 3, -1245156, 0, 3, -1245155, 0, 3, -1245154, 0, 3, -1245148, 0, 65537, -1245147, 0, 655363, -1245146, 0, 1, -1245145, 0, 1, -1245144, 0, 1, -1245143, 0, 1, -1179638, 0, 1, -1179637, 0, 1, -1179636, 0, 1, -1179635, 0, 1, -1179634, 0, 1, -1179633, 0, 65536, -1179632, 0, 1, -1179631, 0, 1, -1179630, 0, 1, -1179629, 0, 1, -1179621, 0, 3, -1179620, 0, 3, -1179619, 0, 3, -1179618, 0, 3, -1179612, 0, 65537, -1179611, 0, 1, -1179610, 0, 1, -1179609, 0, 1, -1179608, 0, 1, -1179607, 0, 1, -1114102, 0, 131073, -1114101, 0, 262144, -1114100, 0, 327682, -1114099, 0, 262145, -1114098, 0, 65537, -1114097, 0, 1, -1114096, 0, 1, -1114095, 0, 1, -1114094, 0, 1, -1114093, 0, 1, -1114091, 0, 524292, -1114090, 0, 524292, -1114089, 0, 524292, -1114088, 0, 524292, -1114087, 0, 524292, -1114086, 0, 524292, -1114085, 0, 3, -1114084, 0, 3, -1114083, 0, 3, -1114082, 0, 3, -1114081, 0, 524292, -1114080, 0, 524292, -1114079, 0, 524292, -1114078, 0, 524292, -1114077, 0, 524292, -1114076, 0, 65537, -1114075, 0, 1, -1114074, 0, 131073, -1114073, 0, 196612, -1114072, 0, 65537, -1114071, 0, 1, -1048566, 0, 131074, -1048565, 0, 327680, -1048564, 0, 196608, -1048563, 0, 327681, -1048562, 0, 65538, -1048561, 0, 2, -1048560, 0, 2, -1048559, 0, 589829, -1048558, 0, 2, -1048557, 0, 2, -1048556, 0, 3, -1048555, 0, 3, -1048554, 0, 3, -1048553, 0, 3, -1048552, 0, 3, -1048551, 0, 3, -1048550, 0, 3, -1048549, 0, 3, -1048548, 0, 3, -1048547, 0, 3, -1048546, 0, 3, -1048545, 0, 3, -1048544, 0, 3, -1048543, 0, 3, -1048542, 0, 3, -1048541, 0, 3, -1048540, 0, 65538, -1048539, 0, 589829, -1048538, 0, 131074, -1048537, 0, 262148, -1048536, 0, 65538, -1048535, 0, 2, -983030, 0, 4, -983029, 0, 3, -983028, 0, 3, -983027, 0, 3, -983026, 0, 4, -983025, 0, 4, -983024, 0, 4, -983023, 0, 4, -983022, 0, 4, -983021, 0, 4, -983020, 0, 3, -983019, 0, 3, -983018, 0, 3, -983017, 0, 3, -983016, 0, 3, -983015, 0, 3, -983014, 0, 3, -983013, 0, 3, -983012, 0, 3, -983011, 0, 3, -983010, 0, 3, -983009, 0, 3, -983008, 0, 3, -983007, 0, 3, -983006, 0, 3, -983005, 0, 3, -983004, 0, 327684, -983003, 0, 327684, -983002, 0, 327684, -983001, 0, 4, -983000, 0, 327684, -982999, 0, 327684, -917494, 0, 3, -917493, 0, 262146, -917492, 0, 262146, -917491, 0, 262146, -917490, 0, 262146, -917489, 0, 262146, -917488, 0, 262146, -917487, 0, 262146, -917486, 0, 262146, -917485, 0, 3, -917484, 0, 3, -917483, 0, 3, -917482, 0, 262146, -917481, 0, 262146, -917480, 0, 262146, -917479, 0, 262146, -917478, 0, 262146, -917477, 0, 3, -917476, 0, 3, -917475, 0, 3, -917474, 0, 3, -917473, 0, 262146, -917472, 0, 262146, -917471, 0, 262146, -917470, 0, 262146, -917469, 0, 262146, -917468, 0, 262146, -917467, 0, 262146, -917466, 0, 3, -917465, 0, 3, -917464, 0, 3, -917463, 0, 3, -851958, 0, 3, -851957, 0, 3, -851956, 0, 3, -851955, 0, 3, -851954, 0, 3, -851953, 0, 3, -851952, 0, 3, -851951, 0, 3, -851950, 0, 3, -851949, 0, 3, -851948, 0, 3, -851947, 0, 3, -851946, 0, 3, -851945, 0, 3, -851944, 0, 3, -851943, 0, 3, -851942, 0, 3, -851941, 0, 3, -851940, 0, 3, -851939, 0, 3, -851938, 0, 3, -851937, 0, 3, -851936, 0, 3, -851935, 0, 3, -851934, 0, 3, -851933, 0, 3, -851932, 0, 3, -851931, 0, 3, -851930, 0, 3, -851929, 0, 3, -851928, 0, 3, -851927, 0, 3, -786422, 0, 3, -786421, 0, 3, -786420, 0, 3, -786419, 0, 3, -786418, 0, 3, -786417, 0, 3, -786416, 0, 3, -786415, 0, 3, -786414, 0, 3, -786413, 0, 3, -786412, 0, 3, -786411, 0, 3, -786410, 0, 3, -786409, 0, 3, -786408, 0, 3, -786407, 0, 3, -786406, 0, 3, -786405, 0, 3, -786404, 0, 3, -786403, 0, 3, -786402, 0, 3, -786401, 0, 3, -786400, 0, 3, -786399, 0, 3, -786398, 0, 3, -786397, 0, 3, -786396, 0, 3, -786395, 0, 3, -786394, 0, 3, -786393, 0, 3, -786392, 0, 3, -786391, 0, 3, -720886, 0, 3, -720885, 0, 3, -720884, 0, 3, -720883, 0, 3, -720882, 0, 3, -655350, 0, 3, -655349, 0, 3, -655348, 0, 3, -655347, 0, 3, -655346, 0, 3, -589814, 0, 3, -589813, 0, 3, -589812, 0, 3, -589811, 0, 3, -589810, 0, 3, -524278, 0, 3, -524277, 0, 3, -524276, 0, 524288, -524275, 0, 524288, -524274, 0, 3, -458742, 0, 3, -458741, 0, 3, -458740, 0, 3, -458739, 0, 3, -458738, 0, 3, -131067, 0, 65539, -131066, 0, 196611, -131065, 0, 196611, -131064, 0, 196611, -131063, 0, 65540, -131056, 0, 65539, -131055, 0, 196611, -131054, 0, 196611, -131053, 0, 196611, -131052, 0, 65540, -65531, 0, 262147, -65530, 0, 262147, -65529, 0, 262147, -65528, 0, 262147, -65527, 0, 262147, -65526, 0, 65537, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 1, -65521, 0, 131073, -65520, 0, 262147, -65519, 0, 262147, -65518, 0, 262147, -65517, 0, 262147, -65516, 0, 262147, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 65537, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 131073, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 65541, 0, 393218, 65542, 0, 393219, 65543, 0, 393219, 65544, 0, 393219, 65545, 0, 393220, 65546, 0, 65537, 65547, 0, 131073, 65550, 0, 65537, 65551, 0, 131073, 65552, 0, 393218, 65553, 0, 393219, 65554, 0, 393219, 65555, 0, 393219, 65556, 0, 393220, 65568, 0, 196611, 65569, 0, 65540, 65570, 0, 1, 65571, 0, 1, 65572, 0, 1, 65573, 0, 1, 65574, 0, 1, 131077, 0, 458754, 131078, 0, 458755, 131079, 0, 458755, 131080, 0, 458755, 131081, 0, 458756, 131082, 0, 65538, 131083, 0, 131074, 131086, 0, 65538, 131087, 0, 131074, 131088, 0, 458754, 131089, 0, 458755, 131090, 0, 458755, 131091, 0, 458755, 131092, 0, 458756, 131104, 0, 262147, 131105, 0, 131076, 131106, 0, 1, 131107, 0, 1, 131110, 0, 1, 196613, 0, 393216, 196614, 0, 3, 196615, 0, 3, 196616, 0, 3, 196617, 0, 3, 196618, 0, 4, 196619, 0, 4, 196620, 0, 524291, 196621, 0, 524291, 196622, 0, 4, 196623, 0, 4, 196624, 0, 3, 196625, 0, 3, 196626, 0, 3, 196627, 0, 3, 196628, 0, 3, 196629, 0, 65537, 196640, 0, 393218, 196641, 0, 393219, 196642, 0, 393220, 196643, 0, 655365, 196646, 0, 655365, 262149, 0, 393216, 262150, 0, 262146, 262151, 0, 262146, 262152, 0, 262146, 262153, 0, 262146, 262154, 0, 3, 262155, 0, 3, 262156, 0, 3, 262157, 0, 3, 262158, 0, 3, 262159, 0, 3, 262160, 0, 262146, 262161, 0, 262146, 262162, 0, 262146, 262163, 0, 262146, 262164, 0, 3, 262165, 0, 65537, 262176, 0, 458754, 262177, 0, 458755, 262178, 0, 458756, 262179, 0, 4, 262180, 0, 3, 262181, 0, 3, 262182, 0, 4, 327685, 0, 393216, 327686, 0, 3, 327687, 0, 5, 327688, 0, 3, 327689, 0, 3, 327690, 0, 3, 327691, 0, 327684, 327692, 0, 327684, 327693, 0, 327684, 327694, 0, 327684, 327695, 0, 3, 327696, 0, 3, 327697, 0, 3, 327698, 0, 5, 327699, 0, 3, 327700, 0, 3, 327701, 0, 65538, 327712, 0, 131077, 327713, 0, 131077, 327714, 0, 131077, 327715, 0, 131077, 327716, 0, 3, 327717, 0, 3, 327718, 0, 131077, 393221, 0, 393216, 393222, 0, 3, 393223, 0, 3, 393224, 0, 3, 393225, 0, 3, 393226, 0, 3, 393227, 0, 3, 393228, 0, 3, 393229, 0, 3, 393230, 0, 3, 393231, 0, 3, 393232, 0, 3, 393233, 0, 3, 393234, 0, 3, 393235, 0, 3, 393236, 0, 3, 393237, 0, 4, 393247, 0, 3, 393248, 0, 3, 393249, 0, 3, 393250, 0, 3, 393251, 0, 3, 393252, 0, 3, 393253, 0, 3, 393254, 0, 3, 458757, 0, 327683, 458758, 0, 3, 458759, 0, 3, 458760, 0, 3, 458761, 0, 3, 458762, 0, 3, 458763, 0, 3, 458764, 0, 3, 458765, 0, 3, 458766, 0, 3, 458767, 0, 3, 458768, 0, 3, 458769, 0, 3, 458770, 0, 3, 458771, 0, 3, 458772, 0, 3, 458784, 0, 3, 458785, 0, 3, 458786, 0, 3, 458787, 0, 3, 458788, 0, 3, 458789, 0, 3, 458790, 0, 3, 524293, 0, 458753, 524294, 0, 3, 524295, 0, 3, 524296, 0, 3, 524297, 0, 3, 524304, 0, 3, 524305, 0, 3, 524306, 0, 3, 524307, 0, 3, 524308, 0, 3, 589829, 0, 393221, 589830, 0, 3, 589831, 0, 3, 589832, 0, 3, 589833, 0, 3, 589840, 0, 3, 589841, 0, 327684, 589842, 0, 327684, 589843, 0, 327684, 589844, 0, 3, 655365, 0, 3, 655366, 0, 3, 655367, 0, 3, 655368, 0, 3, 655369, 0, 3, 655376, 0, 3, 655377, 0, 3, 655378, 0, 3, 655379, 0, 3, 655380, 0, 3 )

[node name="BetweenGroundPlayer" type="TileMap" parent="TileMaps" index="7"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1572837, 0, 589826, -1572834, 0, 589827, -1507301, 0, 589824, -1507298, 0, 589825, -1441765, 0, 589824, -1441762, 0, 589825, -1376229, 0, 589824, -1376226, 0, 589825, -1310693, 0, 589824, -1310690, 0, 589825, -1245157, 0, 589824, -1245154, 0, 589825, -1179621, 0, 589824, -1179618, 0, 589825, -1114085, 0, 655364, -1114082, 0, 589828 )

[node name="Collisions" parent="TileMaps" index="9"]
tile_data = PoolIntArray( -1572838, 0, 0, -1572837, 0, 0, -1572836, 0, 0, -1572835, 0, 0, -1572834, 0, 0, -1572833, 0, 0, -1507302, 0, 0, -1507297, 0, 0, -1441766, 0, 0, -1441761, 0, 0, -1376230, 0, 0, -1376225, 0, 0, -1310694, 0, 0, -1310689, 0, 0, -1245158, 0, 0, -1245153, 0, 0, -1179622, 0, 0, -1179617, 0, 0, -1114091, 0, 0, -1114090, 0, 0, -1114089, 0, 0, -1114088, 0, 0, -1114087, 0, 0, -1114086, 0, 0, -1114081, 0, 0, -1114080, 0, 0, -1114079, 0, 0, -1114078, 0, 0, -1114077, 0, 0, -1048566, 0, 0, -1048565, 0, 0, -1048564, 0, 0, -1048563, 0, 0, -1048562, 0, 0, -1048561, 0, 0, -1048560, 0, 0, -1048559, 0, 0, -1048558, 0, 0, -1048557, 0, 0, -1048556, 0, 0, -1048540, 0, 0, -1048539, 0, 0, -1048538, 0, 0, -1048537, 0, 0, -1048536, 0, 0, -1048535, 0, 0, -1048534, 0, 0, -983031, 0, 0, -982998, 0, 0, -917495, 0, 0, -917462, 0, 0, -851959, 0, 0, -851926, 0, 0, -786423, 0, 0, -786390, 0, 0, -720887, 0, 0, -720881, 0, 0, -720880, 0, 0, -720879, 0, 0, -720878, 0, 0, -720877, 0, 0, -720876, 0, 0, -720875, 0, 0, -720874, 0, 0, -720873, 0, 0, -720872, 0, 0, -720871, 0, 0, -720870, 0, 0, -720869, 0, 0, -720868, 0, 0, -720867, 0, 0, -720866, 0, 0, -720865, 0, 0, -720864, 0, 0, -720863, 0, 0, -720862, 0, 0, -720861, 0, 0, -720860, 0, 0, -720859, 0, 0, -720858, 0, 0, -720857, 0, 0, -720856, 0, 0, -720855, 0, 0, -720854, 0, 0, -655351, 0, 0, -655345, 0, 0, -589815, 0, 0, -589809, 0, 0, -524279, 0, 0, -524273, 0, 0, -458743, 0, 0, -458737, 0, 0, -393206, 0, 0, -393205, 0, 0, -393202, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 196612, 0, 0, 196629, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 262148, 0, 0, 262165, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262183, 0, 0, 327684, 0, 0, 327701, 0, 0, 327711, 0, 0, 327719, 0, 0, 393220, 0, 0, 393238, 0, 0, 393246, 0, 0, 393255, 0, 0, 458756, 0, 0, 458774, 0, 0, 458782, 0, 0, 458791, 0, 0, 524292, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524309, 0, 0, 524319, 0, 0, 524327, 0, 0, 589828, 0, 0, 589834, 0, 0, 589839, 0, 0, 589845, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 655364, 0, 0, 655370, 0, 0, 655375, 0, 0, 655381, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background" index="0"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground" index="0"]
position = Vector2( 192, 0 )
motion_scale = Vector2( 0, 0 )
motion_offset = Vector2( 50, 0 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer" index="0"]
texture = ExtResource( 5 )
offset = Vector2( 192, 0 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background/ParallaxBackground" index="1"]
position = Vector2( 192, 0 )
motion_scale = Vector2( 0.1, 0 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer2" index="0"]
texture = ExtResource( 6 )
offset = Vector2( 192, 0 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background/ParallaxBackground" index="2"]
position = Vector2( 192, -84.15 )
motion_scale = Vector2( 0.2, 0.3 )
motion_offset = Vector2( 50, 0 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer3" index="0"]
texture = ExtResource( 7 )
offset = Vector2( 192, 0 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Background/ParallaxBackground" index="3"]
position = Vector2( 192, -125.14 )
motion_scale = Vector2( 0.3, 0.4 )
motion_offset = Vector2( 50, 0 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer4" index="0"]
texture = ExtResource( 8 )
offset = Vector2( 192, 0 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Background/ParallaxBackground" index="4"]
position = Vector2( 192, -164.08 )
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer5" index="0"]
texture = ExtResource( 9 )
offset = Vector2( 192, 0 )

[node name="ParallaxLayer6" type="ParallaxLayer" parent="Background/ParallaxBackground" index="5"]
position = Vector2( 192, -210.88 )
motion_scale = Vector2( 0.6, 0.6 )
motion_offset = Vector2( 50, 0 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer6" index="0"]
texture = ExtResource( 10 )
offset = Vector2( 192, 0 )

[node name="ParallaxLayer7" type="ParallaxLayer" parent="Background/ParallaxBackground" index="6"]
position = Vector2( 192, -89.54 )
motion_scale = Vector2( 0.7, 0.7 )
motion_offset = Vector2( 50, 0 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer7" index="0"]
texture = ExtResource( 11 )
offset = Vector2( 192, 0 )

[node name="Light2D" type="Light2D" parent="." index="3"]
position = Vector2( 298, 89 )
texture = ExtResource( 12 )
texture_scale = 0.59
color = Color( 0.564706, 0.733333, 0.917647, 1 )

[node name="Light2D2" type="Light2D" parent="." index="4"]
position = Vector2( 121, 88 )
texture = ExtResource( 12 )
texture_scale = 0.59
color = Color( 0.564706, 0.733333, 0.917647, 1 )

[node name="ElevatorCardPickup" parent="YSort" index="0" instance=ExtResource( 13 )]
position = Vector2( 644, -221 )

[node name="Player" parent="YSort" index="1"]
position = Vector2( 256, 72 )

[node name="Orange" parent="YSort" index="2" instance=ExtResource( 14 )]
position = Vector2( 268, 61 )

[node name="Props" type="YSort" parent="YSort" index="3"]

[node name="tableL" parent="YSort/Props" index="0" instance=ExtResource( 15 )]
position = Vector2( 208, 80 )

[node name="excited" parent="YSort/Props" index="1" instance=ExtResource( 16 )]
position = Vector2( 296, 16 )

[node name="beakers2" parent="YSort/Props" index="2" instance=ExtResource( 17 )]
position = Vector2( 273, 21 )

[node name="tableM" parent="YSort/Props" index="3" instance=ExtResource( 18 )]
position = Vector2( 296, 144 )

[node name="beakers1" type="Sprite" parent="YSort/Props/tableM" index="1"]
position = Vector2( 16, -12 )
texture = ExtResource( 19 )

[node name="LabDoor" type="Node2D" parent="YSort/Props" index="4"]
position = Vector2( 208, 48 )

[node name="closed" type="Sprite" parent="YSort/Props/LabDoor" index="0"]
position = Vector2( 0, -16 )
texture = ExtResource( 20 )

[node name="open" type="Sprite" parent="YSort/Props/LabDoor" index="1"]
visible = false
texture = ExtResource( 21 )

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Props/LabDoor" index="2"]
position = Vector2( 0, -17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Props/LabDoor/StaticBody2D" index="0"]
shape = SubResource( 1 )

[node name="ClosedCollision" type="StaticBody2D" parent="YSort/Props/LabDoor" index="3"]
position = Vector2( 0, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Props/LabDoor/ClosedCollision" index="0"]
shape = SubResource( 1 )

[node name="PositionPortal" parent="YSort/Props/LabDoor" index="4" instance=ExtResource( 22 )]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Props/LabDoor/PositionPortal" index="0"]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="YSort/Props/LabDoor/PositionPortal" index="1"]
position = Vector2( -1, -161 )

[node name="PositionPortal2" parent="YSort/Props/LabDoor" index="5" instance=ExtResource( 22 )]
position = Vector2( 0, -141 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Props/LabDoor/PositionPortal2" index="0"]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="YSort/Props/LabDoor/PositionPortal2" index="1"]
position = Vector2( -1, 152 )

[node name="SaveStation" parent="YSort/Props" index="5" instance=ExtResource( 23 )]
position = Vector2( 448, -361 )

[node name="Miniman" parent="YSort" index="4" instance=ExtResource( 24 )]
position = Vector2( 141, 28 )

[editable path="TileMaps"]

[editable path="HUD"]
